# ReVoice

./: CLAUDE.md  CMakeLists.txt
data/: revoice.cfg
revoice/src/: SteamP2PCodec.cpp  VoiceEncoder_Opus.h  revoice_cfg.cpp  revoice_cfg.h  revoice_flood.h  revoice_main.cpp  revoice_player.cpp  revoice_player.h  revoice_shared.h
tests/: CMakeLists.txt  test_voice_flood.cpp
